Fix navbar margin alignment Fix project list margin

--- a/src/navBar.css
+++ b/src/navBar.css
@@ -144,8 +144,8 @@ a:active {
   flex-direction: column;
   height: 100%;
   justify-content: center;
-  margin-left: 1%;
-  margin-right: 1%;
+  margin-left: 3%;
+  /* margin-right: 2%; */
   width: fit-content;
 }
 
