--- a/src/project.css
+++ b/src/project.css
@@ -92,8 +92,8 @@ div.projectDisplay1 {
   /* letter-spacing: -0.02em; */
   color: #000000;
   text-align: left;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
   padding-top: 0.3%;
   padding-bottom: 0.5%;
 }
